--- a/01_learn_react/00_语法补充/05_JavaScript的纯函数.html
+++ b/01_learn_react/00_语法补充/05_JavaScript的纯函数.html
@@ -1,78 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
 </head>
 <body>
-  
-  <script>
-    // 是否是一个纯函数: 是纯函数
-    function sum(num1, num2) {
-      return num1 + num2;
-    }
 
-    sum(20, 30);
-    sum(20, 30);
-    sum(20, 30);
-    sum(20, 30);
-    sum(20, 30);
+<script>
+	// 是否是一个纯函数: 是纯函数
+	function sum(num1, num2) {
+		return num1 + num2;
+	}
 
-    // add函数是否是一个纯函数: 不是一个纯函数
-    let foo = 10;
-    function add(num) {
-      return foo + num;
-    }
+	sum(20, 30);
+	sum(20, 30);
+	sum(20, 30);
+	sum(20, 30);
+	sum(20, 30);
 
-    add(5); // 15
-    foo = 20;
-    add(5); // 25
+	// add函数是否是一个纯函数: 不是一个纯函数
+	let foo = 10;
 
-    // 能否将上面的函数改写成一个纯函数
-    // add2就是一个纯函数
-    const bar = 10;
-    function add2(num) {
-      return bar + num;
-    }
+	function add(num) {
+		return foo + num;
+	}
 
-    bar = 11;
+	add(5); // 15
+	foo = 20;
+	add(5); // 25 // 相同的输入产生了不同的输出了
 
-    // add3是一个纯函数吗? 不是一个纯函数
-    const baz = {
-      count: 10
-    }
-    function add3(num) {
-      return baz.count + num
-    }
+	// 能否将上面的函数改写成一个纯函数
+	// add2就是一个纯函数 // 因为bar是不会被修改的
+	const bar = 10;
 
-    baz.count = 20;
+	function add2(num) {
+		return bar + num;
+	}
 
-    // printInfo是一个纯函数吗? 不是一个纯函数
-    function printInfo(info) {
-      info.name = "why";
-      console.log(info.name, info.age);
-    }
+	bar = 11;
 
-    const obj = {
-      name: "why",
-      age: 18
-    }
+	// add3是一个纯函数吗? 不是一个纯函数
+	const baz = {
+		count: 10
+	}
 
-    printInfo(info);
-    
-    console.log(obj);
+	function add3(num) {
+		return baz.count + num
+	}
+
+	baz.count = 20;
+
+	// printInfo是一个纯函数吗? 不是一个纯函数
+	function printInfo(info) {
+		// 不能改人家的name，产生了副作用 ，最常见的副作用就是把传进来的参数给人家修改了。
+		info.name = "why";
+		console.log(info.name, info.age);
+	}
+
+	const obj = {
+		name: "why",
+		age: 18
+	}
+
+	printInfo(info);
+
+	console.log(obj);
 
 
-    const info = {
-      name: "why",
-      age: 18
-    }
+	const info = {
+		name: "why",
+		age: 18
+	}
 
-    info.name = "kobe";
+	info.name = "kobe";
 
-    const newInfo = {...info, name: "kobe"};
-
-  </script>
+	const newInfo = { ...info, name: "kobe" };
+    // 像redux中reducer就必须是
+</script>
 </body>
 </html>
